# ADA

./: .env.template  Cargo.toml  README.md  build.rs
scripts/: autostart.sh  cage@.service  system_setup.sh  user_setup.sh
src/: drink.rs  main.rs  runtime.rs  ui.rs
src/controller/: codec.rs  mod.rs
ui/: appwindow.slint
