[package]
name = "ada"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
env_logger = "0.11.5"
gatekeeper-members = "0.4.1"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = "1.0.209"
serde-aux = "4.5.0"
serde_json = "1.0.127"
